--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
+  },
+  "volta": {
+    "node": "18.16.0",
+    "yarn": "3.5.1"
   }
 }
